--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -32,6 +32,41 @@
     font-size: var(--font-medium-sm);
 }
 
+.hero__body {
+    padding: 1rem;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: 70%;
+    width: 100%;
+    overflow: scroll;
+    background: var(--color-accent);
+}
+
+.hero__display {
+    position: relative;
+    height: 12rem;
+    width: 100%;
+    padding: 1rem;
+    background: #fff;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25); 
+    border-radius: 0.5rem;
+    margin-bottom: var(--margin-small);
+}
+
+.hero__date {
+    position: absolute;
+    display: flex;
+    height: 2rem;
+    bottom: 1rem;
+    right: 1rem;
+    color: #353535; 
+
+}
+.hero__date span {
+ margin-right: 1rem;
+ font-weight: 500;
+}
 .hero__footer {
     display: flex;
     position: absolute;
