--- a/src/components/NotesList/NotesList.module.css
+++ b/src/components/NotesList/NotesList.module.css
@@ -1,11 +1,13 @@
 .notes {
+    position: relative;
     display: flex;
     flex-direction: column;
-    padding: var(--margin-medium-lm) 0 0 1rem;
+    padding: var(--margin-large) 0 0 1rem;
     align-items: center;
     height: 100vh;
     width: 30%;
-    border: 1px solid red;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .notes__heading {
@@ -14,7 +16,7 @@
 
 .notes__list {
     align-self: flex-start;
-    margin: var(--margin-medium-lm) 0 0 0;
+    margin: var(--margin-medium) 0 0 0;
 }
 
 .notes__list_item {
@@ -42,4 +44,20 @@
     color: #000;
     font-weight: 500;
     font-size: var(--font-medium-sm);
+}
+
+.notes__btn {
+    position: absolute;
+    height: 4.5rem;
+    width: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    bottom: 4rem;
+    right: 3rem;
+    background: transparent;
+    border: none;
+    outline: none;
+    background: #16008B;
 }
