--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import 'variables.css';
 :root {
   font-family: 'Montserrat', sans-serif;
-  line-height: 1.5;
+  line-height: 1.5rem;
   font-weight: 400;
   box-sizing: border-box;
 }
