--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -1,7 +1,7 @@
 .popup{
     position: fixed;
-    left: 50%;
-    top: 40%;
+    top: 35%;
+    left: 35%;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -13,6 +13,7 @@
     font-weight: 500;
     border-radius: 0.5rem;
     z-index: 1;
+    box-shadow: 0px 40px 100rem 0px rgba(0, 0, 0, 0.25);
 
 }
 .popup__body {
@@ -88,4 +89,9 @@
 
 h2{
     font-weight: 500;
+}
+
+.active {
+    border: 1px solid #000;
+    scale: 1.2;
 }
