fix: duplication of notes text in other group

--- a/src/components/Main/MainArea.module.css
+++ b/src/components/Main/MainArea.module.css
@@ -32,3 +32,12 @@ background: #DAE5F5;
     color: #292929;
     bottom: 1.5rem;
 }
+
+
+@media all and (max-width: 500px) {
+
+    .main {
+      display: none;
+    }
+    
+}
