--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,14 +1,18 @@
+.container {
+    height: 100vh;
+    width: 70%;
+}
 .hero {
   position: relative;
   height: 100vh;
-  width: 70%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 .hero__header {
     display: flex;
     align-items: center;
-    height: 6rem;
+    min-height: 6rem;
     width: 100%;
     background:  #001F8B;
 }
@@ -37,16 +41,16 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    height: 70%;
-    width: 100%;
     overflow: scroll;
+    /* height: fit-content; */
+    /* height: 35rem; */
     background: var(--color-accent);
 }
 
 .hero__display {
     position: relative;
     height: 12rem;
-    width: 100%;
+    /* width: 100%; */
     padding: 1rem;
     background: #fff;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25); 
@@ -103,4 +107,13 @@
     width: 2rem;
     background: transparent;
     color: red;
+}
+
+
+@media all and (max-width: 500px) {
+
+    .container {
+      display: none;
+    }
+     
 }
