--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,4 +1,4 @@
-.container {
+.container{
     height: 100vh;
     width: 70%;
 }
@@ -42,15 +42,19 @@
     flex-wrap: nowrap;
     flex-direction: column;
     overflow: scroll;
-    /* height: fit-content; */
-    /* height: 35rem; */
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    
+    height: 70%;
     background: var(--color-accent);
+}
+.hero__body::-webkit-scrollbar {
+    height: 0;
 }
 
 .hero__display {
     position: relative;
-    height: 12rem;
-    /* width: 100%; */
+    min-height: 12rem;
     padding: 1rem;
     background: #fff;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25); 
