--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -13,7 +13,8 @@
     font-weight: 500;
     border-radius: 0.5rem;
     z-index: 1;
-    box-shadow: 0px 40px 100rem 0px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 40px 100rem 0px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0 0 100vw 100vh rgba(0, 0, 0, 0.6);
 
 }
 .popup__body {
@@ -115,7 +116,7 @@ h2{
         font-size: var(--font-small-s);
     }
     .popup__body_input {
-        height: 1rem;
+        height: 1.3rem;
         width: 10rem;
         font-size: var(--font-small-s);
     }
@@ -123,8 +124,8 @@ h2{
         font-size: var(--font-small-s);
     }
     .popup__color {
-        height: 0.5rem;
-        width: 0.5rem;
+        height: 0.8rem;
+        width: 0.8rem;
     }
     .popup__footer {
         align-items: center;
@@ -133,6 +134,7 @@ h2{
     .popup__btn {
     height: 1.5rem;
     width: 4rem;
+    margin-top: 0.4rem;
     font-size: var(--font-small-s);
     }
 }
