--- a/src/components/NotesList/NotesList.module.css
+++ b/src/components/NotesList/NotesList.module.css
@@ -16,6 +16,10 @@
 }
 
 .notes__heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     font-size: var(--font-medium);
 }
 
