--- a/src/components/Main/MainArea.module.css
+++ b/src/components/Main/MainArea.module.css
@@ -1,43 +1,40 @@
-.main{
-position: relative;
-height: 100vh;
-width: 70%;
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-background: #DAE5F5; 
+.main {
+  position: relative;
+  height: 100vh;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: #dae5f5;
 }
 
-.main__header span{
+.main__header span {
   display: block;
   font-weight: 500;
 }
 .main__header img {
-    height: 50%;
+  height: 50%;
 }
 
 .main__header {
-    text-align: center;
+  text-align: center;
 }
 .main__heading {
-    margin: var(--margin-small-s) 0 var(--margin-small-s) 0;
+  margin: var(--margin-small-s) 0 var(--margin-small-s) 0;
 }
 .main__footer {
-    position: absolute;
-    display: flex;
-    gap:0.4rem;
-    justify-content: center;
-    align-items: center;
-    color: #292929;
-    bottom: 1.5rem;
+  position: absolute;
+  display: flex;
+  gap: 0.4rem;
+  justify-content: center;
+  align-items: center;
+  color: #292929;
+  bottom: 1.5rem;
 }
 
-
 @media all and (max-width: 500px) {
-
-    .main {
-      display: none;
-    }
-    
+  .main {
+    display: none;
+  }
 }
