--- a/src/components/NotesList/NotesList.module.css
+++ b/src/components/NotesList/NotesList.module.css
@@ -1,105 +1,103 @@
 .notes {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: var(--margin-large) 0 0 0;
-    align-items: center;
-    height: 100vh;
-    width: 30%;
-    overflow: scroll;
-    scrollbar-width: none;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: var(--margin-large) 0 0 0;
+  align-items: center;
+  height: 100vh;
+  width: 30%;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 
 .notes::-webkit-scrollbar {
-    height: 0;
-    width: 0;
+  height: 0;
+  width: 0;
 }
 
 .notes__heading {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    font-size: var(--font-medium);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: var(--font-medium);
 }
 
 .notes__list {
-    align-self: flex-start;
-    height: 100%;
-    width: 100%;
-    overflow: scroll;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    padding-bottom: 0.5rem;
-    margin: var(--margin-medium) 0 0 0;
+  align-self: flex-start;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  padding-bottom: 0.5rem;
+  margin: var(--margin-medium) 0 0 0;
 }
 .notes__list::-webkit-scrollbar {
-    height: 0;
-    width: 0;
+  height: 0;
+  width: 0;
 }
 .notes__list_item {
-    padding-left: 2rem ;
-    display: flex;
-    height: 6rem;
-    /* width: 100%; */
-    gap: 2.5rem;
-    margin: var(--margin-medium) 0 0 0;
-    align-items: center;        
+  padding-left: 2rem;
+  display: flex;
+  height: 6rem;
+  /* width: 100%; */
+  gap: 2.5rem;
+  margin: var(--margin-medium) 0 0 0;
+  align-items: center;
 }
 
 .notes__profile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 4rem;
-    width: 4rem;
-    color: #fff;
-    font-weight: 500;
-    border-radius: 50%;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 4rem;
+  width: 4rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 50%;
 }
 
 .notes__name {
-    color: #000;
-    font-weight: 500;
-    font-size: var(--font-medium-sm);
+  color: #000;
+  font-weight: 500;
+  font-size: var(--font-medium-sm);
 }
 
 .notes__btn {
-    position: fixed;
-    left: 20%;
-    height: 4.5rem;
-    width: 4.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    bottom: 4rem;
-    right: 3rem;
-    background: transparent;
-    border: none;
-    outline: none;
-    background: #16008B;
-    z-index: 1;
+  position: fixed;
+  left: 20%;
+  height: 4.5rem;
+  width: 4.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  bottom: 4rem;
+  right: 3rem;
+  background: transparent;
+  border: none;
+  outline: none;
+  background: #16008b;
+  z-index: 1;
 }
 .active {
-    border-radius: 1rem;
-    background: rgba(47, 47, 47, 0.17); 
+  border-radius: 1rem;
+  background: rgba(47, 47, 47, 0.17);
 }
 
-
 @media screen and (max-width: 500px) {
-    .notes {
-        width: 100vw;
-    }
-    .notes__heading {
-        font-size: var(--font-medium-sm);
-    }
-    .notes__btn {
-     left: 70%;
-    }
+  .notes {
+    width: 100vw;
+  }
+  .notes__heading {
+    font-size: var(--font-medium-sm);
+  }
+  .notes__btn {
+    left: 70%;
+  }
 
-    .notes__name {
-        font-size: var(--font-medium-s);
-    }
+  .notes__name {
+    font-size: var(--font-medium-s);
+  }
 }
