--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import 'variables.css';
+@import "variables.css";
 :root {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 1.5rem;
   font-weight: 400;
   box-sizing: border-box;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -18,7 +18,7 @@ body {
   height: 100vh;
 }
 
-a{
+a {
   color: inherit;
 }
 
