fix: minor styles and duplicate useffect removed

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -139,4 +139,10 @@
   .hero__date {
     font-size: var(--font-small-s);
   }
+  .hero__textarea::placeholder {
+    font-size: var(--font-small-s);
+  }
+  .hero__textarea {
+    font-size: var(--font-small);
+  }
 }
